<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.verizon.mvyas.verizonproject.TagListActivity"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/linearLayout">


        <Button
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:text="@string/duplicate_thousand_times"
            android:id="@+id/btn_duplicate_thousand_times"
            android:layout_weight="1"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:text="@string/Most_Frq_tag"
            android:id="@+id/btn_most_frq"
            android:layout_weight="1"/>

        <ToggleButton
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:textOn="@string/Ascending_order"
            android:textOff="@string/Descending_order"
            android:id="@+id/btn_asc_dsc"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Total_num_of_tags"
        android:id="@+id/tv_total_tag_count"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_total_tag_count"
        android:background="@color/cherry_red"
        android:padding="@dimen/padding_5">

            <TextView
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:id="@+id/tv_numb"
                android:text="@string/COUNT"
                android:focusableInTouchMode="true"
                android:textSize="@dimen/text_size_18"
                android:gravity="center"
                android:background="@color/accent_material_light"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/Tag_Text"
                android:textSize="@dimen/text_size_18"
                android:id="@+id/tv_tag"
                android:layout_marginLeft="@dimen/padding_5"
                android:paddingLeft="@dimen/padding_10"
                android:layout_weight="2"
                android:gravity="center"
                android:background="@color/accent_material_dark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/title">
        <ListView
            android:id="@+id/lv_tags"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*"
            android:layout_span="2" />
    </LinearLayout>


</RelativeLayout>
