<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ENTER_TAG"
        android:textSize="@dimen/text_size_18"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_mytag"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/INSERT_TAG"
        android:id="@+id/btn_insert_tag"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="176dp"
        android:layout_height="86dp"
        android:id="@+id/tv_goto_taglist_activity"
        android:background="@drawable/red_tag"
        android:text="@string/VIEW_ALL_TAGS"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_18"
        android:clickable="true"
        />

</LinearLayout>
